<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >     
    
                <ImageView
                    android:id="@+id/btnHome"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/btn_home"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/imgDescBtnHome"/>
            
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/title_activity_contact"
                    android:gravity="right"
                    android:textSize="@dimen/text_size"
                    android:background="@drawable/rounded_title"
                    android:textColor="@color/white"/>
              
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/txtQuestions" />
                    
                    <TextView
                        android:id="@+id/btnSend"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/rectangle_button"
                        android:textColor="@color/white"
                        android:text="@string/btnSend"
                        android:gravity="center"
                        android:contentDescription="@string/imgDescBtnSend" />                
                                                                                      
                </RelativeLayout>
                
                <EditText 
                    android:id="@+id/etxSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:singleLine="true"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/hintSubject"/>
                
                <EditText
                    android:id="@+id/etxText"
                    android:layout_width="match_parent"
                    android:gravity="top|left"
                    android:lines="8"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:layout_height="270dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/hintText" />
                
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txtBusiness" />
                                  
                    
                 <ImageView
                     android:id="@+id/btnBack"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/arrow"
                     android:layout_margin="10dp"
                     android:contentDescription="@string/imgDescBtnBack"/>                                                                                                 
                 
             </LinearLayout>
             
    </ScrollView>    
</LinearLayout>
