<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"       
    tools:context=".ForgottenUserActivity" >

    <TextView        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:text="@string/txtEnterEmail"
        android:textSize="@dimen/text_size"
        android:layout_gravity="left" />
    
    
    <EditText
        android:id="@+id/etxEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="12dp"
        android:singleLine="true"
        android:background="@drawable/rounded_corner"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"        
        android:text="@string/hintForgottenPassword"
        android:textSize="@dimen/text_size_small"        
         />
    
    
    <ImageButton
        android:id="@+id/btnSubmit"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_gravity="center"        
        android:contentDescription="@string/imgDescBtnSubmit"
        android:src="@drawable/btn_submit" />
   
</LinearLayout>
