<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">    
    
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight=".9"
         android:layout_margin="10dp"
         android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"            
            android:src="@drawable/btn_home"            
            android:contentDescription="@string/imgDescBtnHome"/>    
     
        <TextView 
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"            
            android:text="@string/title_fart_hall"
            android:gravity="right"
            android:textSize="@dimen/text_size"
            android:background="@drawable/rounded_title"
            android:textColor="@color/white"/>
        
    </LinearLayout>        
    
    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight=".6" >
    
        <TextView 
            android:id="@+id/headerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/headerName"
            android:visibility="gone"/>
        
        <TextView 
            android:id="@+id/headerBombs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/headerBombs"
            android:visibility="gone"/>
        
        <TextView 
            android:id="@+id/headerRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/headerRating"
            android:visibility="gone"/>
        
    
        <TextView 
            android:id="@+id/txtEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"/>
        
                
    </RelativeLayout>
    
    <ListView
        android:id="@+id/listFartHall"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.5"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible" />
    
    

</LinearLayout>
