<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"    
            tools:context=".SignupActivity" >
    
        <TextView        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:text="@string/txtSignUp"
            android:textSize="@dimen/text_size"
            android:layout_gravity="left" />
        
        <EditText
            android:id="@+id/etxUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"        
            android:layout_margin="12dp"
            android:maxLength="20"   
            android:singleLine="true"     
            android:background="@drawable/rounded_corner"            
            android:hint="@string/hintUserName"            
            android:ems="8" >
                
        </EditText>
        
        <EditText
            android:id="@+id/etxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="12dp"
            android:singleLine="true"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintEmail"            
            android:inputType="textEmailAddress" />      
            
        
        <EditText
            android:id="@+id/etxPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintPassword"
            android:inputType="textPassword" />
        
        <EditText 
            android:id="@+id/etxConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintConfirmPass"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/etxPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/hintPhoneNumber"
            android:maxLength="10"
            android:inputType="phone" />
    
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView
                    android:id="@+id/txtExistingUser"
                    android:layout_width="100dp"
                    android:layout_height="103dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingTop="40dp"
                    android:textSize="@dimen/text_size_small"
                    android:text="@string/txtExistingUser" />
                
                <ImageButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="103dp"
                    android:layout_height="103dp"            
                    android:layout_gravity="center"        
                    android:contentDescription="@string/imgDescBtnSubmit"
                    android:src="@drawable/btn_submit" />
            </LinearLayout>    

        
    
        </LinearLayout>
        
        </ScrollView>
        
    </LinearLayout>
        
