<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/txtFileName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <EditText
        android:id="@+id/etxBombName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:maxLength="15"
        android:background="@drawable/rounded_corner"
        android:hint="@string/hintBombName"/>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <ImageView
            android:id="@+id/btnPlayBomb"
            android:layout_width="wrap_content"            
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/btn_play"
            android:contentDescription="@string/imgDescBtnPlay" />
                
    </RelativeLayout>
    
    
    <ImageButton
            android:id="@+id/btnSubmit"
            android:layout_width="103dp"
            android:layout_height="103dp"
            android:layout_gravity="center"        
            android:contentDescription="@string/imgDescBtnSubmit"
            android:src="@drawable/btn_submit" />

</LinearLayout>
