<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    
    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/btn_home"
        android:layout_margin="10dp"
        android:contentDescription="@string/imgDescBtnHome"/>    
        
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/title_activity_disclaimer"
        android:gravity="right"
        android:textSize="@dimen/text_size"
        android:background="@drawable/rounded_title"
        android:textColor="@color/white"/>
            
    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" 
        android:textIsSelectable="false"
        android:clickable="false"        
        android:focusable="false"
        android:maxLines="18"
        android:scrollbars="vertical"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold|normal" />             
                                 
     <ImageView
         android:id="@+id/btnBack"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/arrow"
         android:layout_margin="10dp"
         android:contentDescription="@string/imgDescBtnBack"/>
                       
</LinearLayout>
