<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:orientation="vertical" >
    
   <RelativeLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       
       <ImageView
           android:id="@+id/btnHome"
           android:layout_width="40dp"
           android:layout_height="40dp"        
           android:src="@drawable/btn_home"
           android:layout_alignParentLeft="true"
           android:layout_margin="10dp"
           android:contentDescription="@string/imgDescBtnHome"/>
       
       <ImageView
           android:id="@+id/btnContacts"
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:src="@drawable/btn_contacts"
           android:layout_margin="10dp"
           android:layout_alignParentRight="true"
           android:contentDescription="@string/imgDescBtnHome"/>
       
   </RelativeLayout>    
 
    <TextView 
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:layout_margin="10dp"        
        android:gravity="right"
        android:textSize="@dimen/text_size"
        android:text="@string/title_find_friends"
        android:background="@drawable/rounded_title"
        android:textColor="@color/white"/>
    
       
    <EditText 
        android:id="@+id/etxSearchFriends"       
        android:layout_width="match_parent"
        android:layout_height="wrap_content"                  
        android:layout_margin="10dp"
        android:inputType="text"
        android:imeOptions="actionSearch" 
        android:drawableRight="@drawable/btn_search"           
        android:background="@drawable/rounded_corner"
        android:hint="@string/hintSearchFriends"/>                       
   

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>        
        
    <ListView
        android:id="@+id/listPotentialFriends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.6"
        android:layout_margin="10dp" />

</LinearLayout>
