<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
                    
    
        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".8"
             android:layout_margin="10dp"
             android:orientation="horizontal">
             
            <ImageView
                android:id="@+id/btnHome"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="10dp"            
                android:src="@drawable/btn_home"            
                android:contentDescription="@string/imgDescBtnHome"/>    
                
            <TextView 
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"                
                android:text=""
                android:gravity="right"
                android:textSize="@dimen/text_size"
                android:background="@drawable/rounded_title"
                android:textColor="@color/white"/>
             
         </LinearLayout>
          
          
      
            <RelativeLayout
               android:layout_width="fill_parent"
               android:layout_height="0dp"
               android:layout_weight="2.3"
               android:layout_marginTop="2dp"
               android:layout_marginBottom="10dp">
              
                 <TextView
                    android:id="@+id/txtFriends"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:textColor="@color/white"                                 
                    android:layout_centerVertical="true"
                    android:background="@anim/highlight" />
                  
                  
                 <TextView
                     android:id="@+id/lblFriends"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignLeft="@id/txtFriends"
                     android:layout_alignParentBottom="true"
                     android:text="@string/lblFriends"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
    
                  <TextView
                      android:id="@+id/txtRating"
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:layout_margin="20dp"
                      android:textColor="@color/white"
                      android:gravity="center"                      
                      android:layout_centerVertical="true"
                      android:layout_alignParentRight="true"                      
                      android:background="@anim/highlight" />
                  
                  
                   <TextView                      
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignLeft="@id/txtRating"
                      android:layout_alignParentBottom="true"
                      android:singleLine="true"
                      android:text="@string/lblRating"
                      android:textAppearance="?android:attr/textAppearanceSmall" />
    
                  <TextView
                      android:id="@+id/txtBombs"
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:textColor="@color/white"
                      android:gravity="center"                      
                      android:layout_centerHorizontal="true"
                      android:layout_centerVertical="true"                      
                      android:background="@anim/highlight" />
                  
                   <TextView      
                      android:id="@+id/lblBombs"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"                      
                      android:layout_centerHorizontal="true"
                      android:layout_alignParentBottom="true"
                      android:text="@string/lblBombs"                      
                      android:textAppearance="?android:attr/textAppearanceSmall" />

                                   
         </RelativeLayout>
         
                                         
             
         <RelativeLayout 
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight=".6"
             android:background="@drawable/line_back">
             
             <TextView
                android:id="@+id/txtFragmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"                                
                android:padding="5dp"
                android:textColor="@color/frog_green"
                android:background="@color/beige"                                                                           
                android:layout_gravity="center" />
             
             <ImageView 
                 android:id="@+id/btnAddFriends"
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"             
                 android:src="@drawable/btn_friend_add"                 
                 android:layout_alignParentRight="true"
                 android:visibility="gone" />
                          
         </RelativeLayout>                                   
         
         <ViewFlipper
             android:id="@+id/viewflipper"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="10dp"
             android:layout_weight="6.3" >
             
             <ListView
                 android:id="@+id/friendList"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"/>
                      
             <ListView
                 android:id="@+id/bombList"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"/>
         
        </ViewFlipper>
                      
</LinearLayout>                

